--- a/bookings.html
+++ b/bookings.html
@@ -203,7 +203,7 @@
                 <h2>Need Immediate Assistance?</h2>
                 <p>For last-minute bookings or urgent inquiries, call our 24/7 concierge team.</p>
                 <a href="tel:+15551234567" class="cta-button phone-button">
-                    <i class="fas fa-phone"></i> +1 (555) 123-4567
+                    <i class="fas fa-phone"></i> +254 703 9770 54
                 </a>
             </div>
         </div>
@@ -227,7 +227,7 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contact Us</h3>
-                    <p><i class="fas fa-phone"></i> +254 039770 54</p>
+                    <p><i class="fas fa-phone"></i> +254 703 9770 54</p>
                     <p><i class="fas fa-envelope"></i> info@swiftlyair.com</p>
                     <p><i class="fas fa-map-marker-alt"></i> Nyayo Estate, Nairobi, NB</p>
                 </div>
@@ -266,7 +266,8 @@
     <button class="chatbot-toggle">
         <i class="fas fa-comments"></i>
     </button>
-
+    <!-- Add this right before the closing </body> tag -->
+    <script src="form.js"></script>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/chatbot.js"></script>
 </body>
