--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contact Us</h3>
-                    <p><i class="fas fa-phone"></i> +254 039770 54</p>
+                    <p><i class="fas fa-phone"></i> +254 703 9770 54</p>
                     <p><i class="fas fa-envelope"></i> info@swiftlyair.com</p>
                     <p><i class="fas fa-map-marker-alt"></i> Nyayo Estate, Nairobi, NB</p>
                 </div>
