--- a/bookings.html
+++ b/bookings.html
@@ -202,7 +202,7 @@
             <div class="urgency-content">
                 <h2>Need Immediate Assistance?</h2>
                 <p>For last-minute bookings or urgent inquiries, call our 24/7 concierge team.</p>
-                <a href="tel:+15551234567" class="cta-button phone-button">
+                <a href="tel:+254 7039770 54" class="cta-button phone-button">
                     <i class="fas fa-phone"></i> +254 703 9770 54
                 </a>
             </div>
