--- a/bookings.html
+++ b/bookings.html
@@ -250,7 +250,7 @@
             <div class="chatbot-avatar">
                 <img src="assets/images/chatbot-avatar.png" alt="Swiftly Assistant">
             </div>
-            <h4>Swiftly Assistant</h4>
+            <h4>Swiftly Concierge</h4>
             <button class="close-chatbot"><i class="fas fa-times"></i></button>
         </div>
         <div class="chatbot-messages">
