--- a/services.html
+++ b/services.html
@@ -222,9 +222,9 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contact Us</h3>
-                    <p><i class="fas fa-phone"></i> +254 703 9770 54</p>
-                    <p><i class="fas fa-envelope"></i> info@swiftlyair.com</p>
-                    <p><i class="fas fa-map-marker-alt"></i> Nyayo Estate, Nairobi, NB</p>
+                    <p><i class="fas fa-phone"></i> +254 799 250 339</p>
+                    <p><i class="fas fa-envelope"></i> larkiptech@gmail.com</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Nairobi, Kenya 00100</p>
                 </div>
             </div>
             <div class="footer-bottom">
