--- a/bookings.html
+++ b/bookings.html
@@ -203,7 +203,7 @@
                 <h2>Need Immediate Assistance?</h2>
                 <p>For last-minute bookings or urgent inquiries, call our 24/7 concierge team.</p>
                 <a href="tel:+254 7039770 54" class="cta-button phone-button">
-                    <i class="fas fa-phone"></i> +254 703 9770 54
+                    <i class="fas fa-phone"></i> +254 799 250 339
                 </a>
             </div>
         </div>
@@ -227,9 +227,9 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contact Us</h3>
-                    <p><i class="fas fa-phone"></i> +254 703 9770 54</p>
-                    <p><i class="fas fa-envelope"></i> info@swiftlyair.com</p>
-                    <p><i class="fas fa-map-marker-alt"></i> Nyayo Estate, Nairobi, NB</p>
+                    <p><i class="fas fa-phone"></i> +254 799 250 339</p>
+                    <p><i class="fas fa-envelope"></i> larkiptech@gmail.com</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Nairobi, Kenya 00100</p>
                 </div>
             </div>
             <div class="footer-bottom">
